--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ rvm:
   - 2.3
   - 2.4
   - 2.5
+  - 2.6
 before_install:
-  - gem install bundler -v 1.17.3 --no-rdoc --no-ri --without guard
+  - gem install bundler -v 1.17.3 --without guard
   - bundle _1.17.3_ install
 script: bundle exec rubocop -D && bundle exec rake
 services:
@@ -14,7 +15,7 @@ services:
   - mongodb
   - memcached
 env:
-  - RAILS_VERSION=6.0.0.rc1 SQLITE3_VERSION=1.4.1
+  - RAILS_VERSION=6.0.0 SQLITE3_VERSION=1.4.1
   - RAILS_VERSION=5.2.3
   - RAILS_VERSION=5.1.4
   - RAILS_VERSION=5.0.0
@@ -30,10 +31,10 @@ matrix:
     - rvm: 2.1
       env: RAILS_VERSION=5.2.3
     - rvm: 2.1
-      env: RAILS_VERSION=6.0.0.rc1 SQLITE3_VERSION=1.4.1
+      env: RAILS_VERSION=6.0.0 SQLITE3_VERSION=1.4.1
     - rvm: 2.2
-      env: RAILS_VERSION=6.0.0.rc1 SQLITE3_VERSION=1.4.1
+      env: RAILS_VERSION=6.0.0 SQLITE3_VERSION=1.4.1
     - rvm: 2.3
-      env: RAILS_VERSION=6.0.0.rc1 SQLITE3_VERSION=1.4.1
+      env: RAILS_VERSION=6.0.0 SQLITE3_VERSION=1.4.1
     - rvm: 2.4
-      env: RAILS_VERSION=6.0.0.rc1 SQLITE3_VERSION=1.4.1
+      env: RAILS_VERSION=6.0.0 SQLITE3_VERSION=1.4.1
